# intel-fpga-profile-viewer

./: Cargo.toml  README.md
src/: data_model.rs  main.rs  module_instance_details.rs
