[package]
name = "intel-fpga-profile-viewer"
version = "0.1.0"
authors = ["Marius Knaust <marius.knaust@gmail.com>"]
edition = "2018"
description = "Unofficial CLI to aggregate and display profiling information recorded by the Intel FPGA Dynamic Profiler"

[dependencies]
anyhow = "1.0"
structopt = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# Until https://github.com/serde-rs/serde/issues/723 is resolved
serde_with = "1.8"
